# med-mcp-threat

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HTTP_DEPLOYMENT.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  WINDOWS_CLEAN_INSTALL.md  WINDOWS_INSTALL.md  build.sh  docker-compose.yml  example_client.py  package.json  pyproject.toml  requirements.txt  run_http_server.py  test_http_client.py  test_normalizer.py  test_server.py
mcp_threat_extraction/: __init__.py  auth.py  cli.py  cvss_logic.py  logging_config.py  semantic_normalizer_optimized.py  server.py  threat_data.py  threat_extraction.py
mcp_threat_extraction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
